# rgb_led

./: .gitignore  CMakeLists.txt
config/: 99-leds-access.rules  CMakeLists.txt  rgb-led-ayn-odin2.desktop
config/data/ayn-odin2/: ayn-odin2.json
include/: file.h  leds.h  path.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  file.c  leds.cpp  path.c
src/qt/: CMakeLists.txt  device.cpp  device.h  leds_intf.cpp  main.cpp  main_window.cpp  main_window.h
